2003-10-11  Bruno Haible  <bruno@clisp.org>

	* xgettext.c (main): Drop suffix ".in" from input file name, if
	present, before looking at the file extension.

2003-10-09  Bruno Haible  <bruno@clisp.org>

	* format-awk.c: Include xalloc.h instead of xmalloc.h.
	* format-c.c: Likewise.
	* format-elisp.c: Likewise.
	* format-gcc-internal.c: Likewise.
	* format-java.c: Likewise.
	* format-librep.c: Likewise.
	* format-lisp.c: Likewise.
	* format-pascal.c: Likewise.
	* format-perl.c: Likewise.
	* format-perl-brace.c: Likewise.
	* format-php.c: Likewise.
	* format-python.c: Likewise.
	* format-sh.c: Likewise.
	* format-tcl.c: Likewise.
	* format-ycp.c: Likewise.
	* gettext-po.c: Likewise.
	* hostname.c: Likewise.
	* message.c: Likewise.
	* msgexec.c: Likewise.
	* msgfilter.c: Likewise.
	* msgfmt.c: Likewise.
	* msggrep.c: Likewise.
	* msginit.c: Likewise.
	* msgl-cat.c: Likewise.
	* msgl-english.c: Likewise.
	* msgl-iconv.c: Likewise.
	* msgmerge.c: Likewise.
	* open-po.c: Likewise.
	* po-gram-gen.y: Likewise.
	* po-hash-gen.y: Likewise.
	* po-lex.c: Likewise.
	* read-mo.c: Likewise.
	* read-po-abstract.c: Likewise.
	* read-po.c: Likewise.
	* read-properties.c: Likewise.
	* str-list.c: Likewise.
	* write-java.c: Likewise.
	* write-mo.c: Likewise.
	* write-po.c: Likewise.
	* write-properties.c: Likewise.
	* write-tcl.c: Likewise.
	* x-awk.c: Likewise.
	* x-c.c: Likewise.
	* x-elisp.c: Likewise.
	* x-glade.c: Likewise.
	* x-java.c: Likewise.
	* x-librep.c: Likewise.
	* x-lisp.c: Likewise.
	* x-perl.c: Likewise.
	* x-php.c: Likewise.
	* x-po.c: Likewise.
	* x-python.c: Likewise.
	* x-rst.c: Likewise.
	* x-sh.c: Likewise.
	* x-smalltalk.c: Likewise.
	* x-tcl.c: Likewise.
	* x-ycp.c: Likewise.
	* xgettext.c: Likewise.

2003-10-07  Bruno Haible  <bruno@clisp.org>

	More reliable subprocess cleanup.
	* msgexec.c (process_string): Pass slave_process = true to
	create_pipe_out() and wait_subprocess().
	* msgfilter.c (process_string): Pass slave_process = true to